@@ -1,10 +1,14 @@
 
 version 0.6.0 (cvs)
 
-	- support for sending legacy invitations via Place service
-
 	- using MPI code from http://www.cs.dartmouth.edu/~sting/mpi/ as a
 	replacement for the GMP dependancy
+
+	Features
+	- support for sending legacy invitations via Place service
+
+	Bug Fixes
+	- Crash and other problems with joining a Place
 	
 version 0.5.0 (2005-10-28)
 
